# mkcurl

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MKBuild.yaml  README.md  docker.sh  integration-tests.cpp  libcurlx-client.cpp  libcurlx-get.cpp  libcurlx-post.cpp  libcurlx.h  mkcurl-client.cpp  mkcurl.cpp  mkcurl.h  mkcurl.hpp  summary.hpp  tests.cpp  unit-tests.cpp
.ci/docker/: run.sh  trampoline.sh
